--- a/server/views/PurchasePDF.ejs
+++ b/server/views/PurchasePDF.ejs
@@ -3,7 +3,7 @@
 
 <body>
     <section>
-        <h2>Purchase Invoice</h2>
+        <h4>Purchase Invoice</h4>
         <div class="main">
             <div class="row1">
                 <div class="col-1">
@@ -33,14 +33,14 @@
             <thead>
                 <tr>
                     <th>SNo.</th>
-                    <th>ProductNameType</th>
+                    <th>ProductType</th>
                     <th>ProductName </th>
                     <th>UnitPrice</th>
                     <th>Quantity</th>
                     <th>SubTotal</th>
-                    <th>DiscountAmount</th>
-                    <th>GSTAmount</th>
-                    <th>TotalAmount</th>
+                    <th>DisAmt</th>
+                    <th>GSTAmt</th>
+                    <th>TotalAmt</th>
                 </tr>
             </thead>
             <tbody>
