--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -36,7 +36,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-1 col-1" style="width: 70px;padding: 0;">
-                                    <button class="bg-none" (click)="openModal(content)">
+                                    <button class="bg-none" (click)="openModal(content)" *ngIf="addShopList === true">
                                         <mat-icon class="col-white plus_icon me-1" data-mdb-toggle="modal"
                                         data-mdb-target="#exampleModal" > add</mat-icon>
                                     </button>
@@ -61,10 +61,10 @@
                                         <p class="text-center m-0">{{data.Email}}</p>
                                         <p class="text-center m-0 cardAddress">{{data.Address }}</p>
                                         <div class="text-center mb-3">
-                                            <button class="bg-none" (click)="openModalEdit(content,data)">
+                                            <button *ngIf="editShopList === true" class="bg-none" (click)="openModalEdit(content,data)" >
                                                 <mat-icon class="edit_icon ms-1" >edit</mat-icon>
                                             </button>
-                                            <button class="bg-none" (click)="deleteItem(i)">
+                                            <button *ngIf="deleteShopList === true" class="bg-none" (click)="deleteItem(i)">
                                               <mat-icon class="delete_icon ms-1" >delete_forever</mat-icon>
                                             </button>
                                         </div>
@@ -102,11 +102,11 @@
                                                 <tr   class="text-center" *ngFor="let data of dataList let i = index;"
                                                     style="white-space: nowrap;">
                                                     <td style="width: 7%;">
-                                                        <button class="bg-none" (click)="openModalEdit(content,data)">
+                                                        <button *ngIf="editShopList === true" class="bg-none" (click)="openModalEdit(content,data)">
                                                             <mat-icon class="edit_icon ms-1" data-mdb-toggle="modal"
                                                             data-mdb-target="#exampleModal">edit</mat-icon>
                                                         </button>
-                                                        <button class="bg-none" (click)="deleteItem(i)">
+                                                        <button *ngIf="deleteShopList === true" class="bg-none" (click)="deleteItem(i)">
                                                             <mat-icon class="delete_icon ms-1" > delete_forever</mat-icon>
                                                         </button>
                                                     </td>
