--- a/web1/src/app/company-payment/payroll/payroll.component.html
+++ b/web1/src/app/company-payment/payroll/payroll.component.html
@@ -41,7 +41,7 @@
                             </div>
                             <div class="col-md-1 col-1" style="width: 40px;padding: 0;">
                                 <button class="bg-none" (click)="openModal(content)">
-                                    <mat-icon class="col-white plus_icon me-1" data-mdb-toggle="modal"
+                                    <mat-icon *ngIf="addpayrollList" class="col-white plus_icon me-1" data-mdb-toggle="modal"
                                         data-mdb-target="#exampleModal"> add</mat-icon>
                                 </button>
                             </div>
@@ -73,13 +73,13 @@
                                 <tbody>
                                     <tr *ngFor="let data of dataList  let i = index;">
                                         <td class="text-center" style="width: 7%;">
-                                            <button class="bg-none" (click)="openEditModal(content,data)">
+                                            <button *ngIf="editpayrollList" class="bg-none" (click)="openEditModal(content,data)">
                                                 <mat-icon class="edit_icon ms-1" data-mdb-toggle="modal"
                                                     data-mdb-target="#exampleModal">
                                                     edit
                                                 </mat-icon>
                                             </button>
-                                            <button class="bg-none" (click)="deleteItem(i)">
+                                            <button *ngIf="deletepayrollList" class="bg-none" (click)="deleteItem(i)">
                                                 <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                                             </button>
                                         </td>
