--- a/web1/src/app/inventory/fitter-list/fitter-list.component.html
+++ b/web1/src/app/inventory/fitter-list/fitter-list.component.html
@@ -35,7 +35,7 @@
                   </div>
                 </div>
                 <div class="col-md-1 col-1" style="width: 70px;padding: 0;">
-                  <mat-icon class="col-white plus_icon me-1" [routerLink]="['/inventory/fitter',0]"> add</mat-icon>
+                  <mat-icon *ngIf="addFitterList" class="col-white plus_icon me-1" [routerLink]="['/inventory/fitter',0]"> add</mat-icon>
                   <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview" title="Grid View">grid_on
                   </mat-icon>
                 </div>
@@ -54,8 +54,8 @@
                     <p class="text-center m-0">{{data.Email}}</p>
                     <p class="text-center m-0 cardAddress">{{data.Address }}</p>
                     <div class="text-center mb-3">
-                      <mat-icon class="edit_icon ms-1" [routerLink]="['/inventory/fitter',data.ID]">edit</mat-icon>
-                      <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
+                      <mat-icon *ngIf="editFitterList"  class="edit_icon ms-1" [routerLink]="['/inventory/fitter',data.ID]">edit</mat-icon>
+                      <mat-icon *ngIf="deleteFitterList"  class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
                     </div>
                   </div>
                 </div>
@@ -89,9 +89,9 @@
                         <tr class="text-center" *ngFor="let data of dataList let i = index;"
                           style="white-space: nowrap;">
                           <td style="width: 7%;">
-                            <mat-icon class="edit_icon ms-1" [routerLink]="['/inventory/fitter',data.ID]">edit
+                            <mat-icon *ngIf="editFitterList"  class="edit_icon ms-1" [routerLink]="['/inventory/fitter',data.ID]">edit
                             </mat-icon>
-                            <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
+                            <mat-icon *ngIf="deleteFitterList" class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
                           </td>
                           <td>{{ dataList.length - i }}</td>
                           <td class="text-left">{{data.Name}}</td>
