--- a/web1/src/app/inventory/fitter/fitter.component.html
+++ b/web1/src/app/inventory/fitter/fitter.component.html
@@ -128,10 +128,10 @@
                                     <div class="row">
                                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-3">
                                             <button class="me-3" type="button" mat-raised-button color="primary"
-                                                [disabled]="!f.valid" *ngIf="id != 0"
+                                                [disabled]="!f.valid" *ngIf="id != 0 && addFitter"
                                                 (click)="updateFitter()">Update</button>
                                             <button type="submit" class="me-3" mat-raised-button color="primary"
-                                                [disabled]="!f.valid" *ngIf="id == 0">Save</button>
+                                                [disabled]="!f.valid" *ngIf="id == 0 && addFitter">Save</button>
                                             <button type="button" mat-raised-button
                                                 [routerLink]="['/inventory/fitterList']">Back</button>
                                                 <button class="ms-3" type="button" mat-raised-button color="primary"
@@ -186,7 +186,7 @@
                                                     </mat-form-field>
                                                 </div>
                                                 <div class="col-lg-2">
-                                                    <button type="submit" class="me-3" mat-raised-button color="primary"
+                                                    <button *ngIf="addFitter" type="submit" class="me-3" mat-raised-button color="primary"
                                                         [disabled]="!assignForm.valid">Save</button>
                                                 </div>
                                             </div>
@@ -207,7 +207,7 @@
                                             <tbody class="text-center">
                                                 <tr *ngFor="let s of rateCardList; let i = index">
                                                     <td>
-                                                        <mat-icon class="delete_icon me-1" (click)="deleteRateCard(i)">
+                                                        <mat-icon *ngIf="deleteFitter" class="delete_icon me-1" (click)="deleteRateCard(i)">
                                                             delete_forever</mat-icon>
                                                     </td>
                                                     <td>{{rateCardList.length - i}}</td>
@@ -238,7 +238,7 @@
                                                      <span *ngIf="ShopID.touched && ShopID.errors" class="errorss"> Shop is required</span>
                                                 </div>
                                                 <div class="col-lg-6">
-                                                    <button class="mr-3" mat-raised-button color="primary"
+                                                    <button *ngIf="addFitter" class="mr-3" mat-raised-button color="primary"
                                                         [disabled]="!assignShopForm.valid">Save </button>
                                                 </div>
                                             </div>
@@ -259,7 +259,7 @@
                                             <tbody class="text-center">
                                                 <tr *ngFor="let s of assignShopList; let i = index">
                                                     <td>
-                                                        <mat-icon class="delete_icon me-1"
+                                                        <mat-icon *ngIf="deleteFitter" class="delete_icon me-1"
                                                             (click)="deleteFitterAssignedShop(i)">delete_forever
                                                         </mat-icon>
                                                     </td>
