--- a/web1/src/app/inventory/pre-order/pre-order.component.html
+++ b/web1/src/app/inventory/pre-order/pre-order.component.html
@@ -302,7 +302,7 @@
                                     <mat-checkbox style="padding-top: 14px;" name="BrandLock"  *ngIf="item.BrandType !== 0" color="primary" [(ngModel)]="BrandLock"></mat-checkbox>
 
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
+                                <div *ngIf="addOrderPrice" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
                                     <button *ngIf="editBtn === false" class="mr-3" type="submit" 
                                         mat-raised-button color="primary" [disabled]="!f.valid || item.GSTPercentage === 0 && item.GSTType !== 'None' && item.GSTType !== 'NONE' && item.GSTType !== '' "
                                         mat-raised-button color="primary" >Add</button>
@@ -351,8 +351,8 @@
                                                     <!-- <td style="z-index: -999 !important;" *ngIf="data.Status === 0"></td> -->
                                                     <td class="text-center">
                                                         <!-- <mat-icon *ngIf="data.Status != 0 && data.ID !== null" class="print_icon ">print</mat-icon> -->
-                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icons ms-1" (click)="deleteItem('Product',i)">delete_forever</mat-icon>
-                                                        <mat-icon class="edit_icons ms-1" (click)="edititem('Product',data)" *ngIf="data.ID === null">edit </mat-icon>
+                                                        <mat-icon *ngIf="data.Status !== 0 && deleteOrderPrice" class="delete_icons ms-1" (click)="deleteItem('Product',i)">delete_forever</mat-icon>
+                                                        <mat-icon class="edit_icons ms-1" (click)="edititem('Product',data)" *ngIf="data.ID === null && editOrderPrice">edit </mat-icon>
                                                     </td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" ><span *ngIf="data.BaseBarCode !== ''">{{data.BaseBarCode * 1000}}</span>  </td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.UniqueBarcode}}</td>
