--- a/web1/src/app/inventory/preorder-list/preorder-list.component.html
+++ b/web1/src/app/inventory/preorder-list/preorder-list.component.html
@@ -40,7 +40,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-1 col-1" style="width: 40px;padding: 0;">
-                                    <button class="bg-none" [routerLink]="['/inventory/pre-order',0]">
+                                    <button *ngIf="addOrderPriceList" class="bg-none" [routerLink]="['/inventory/pre-order',0]">
                                         <mat-icon class="col-white plus_icon me-1"> add</mat-icon>
                                     </button>
                                 </div>
@@ -75,12 +75,12 @@
                                                 <tr class="text-center" *ngFor="let data of dataList let i = index;"
                                                     style="white-space: nowrap;">
                                                     <td style="width: 5%;">
-                                                        <button class="bg-btn"
+                                                        <button *ngIf="editOrderPriceList" class="bg-btn"
                                                             [routerLink]="['/inventory/pre-order',data.ID]">
                                                             <mat-icon class="edit_icon ms-1">edit
                                                             </mat-icon>
                                                         </button>
-                                                        <button class="bg-btn" (click)="deleteItem(i)">
+                                                        <button *ngIf="deleteOrderPriceList" class="bg-btn" (click)="deleteItem(i)">
                                                             <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                                                         </button>
                                                     </td>
