--- a/web1/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web1/src/app/inventory/purchase-return/purchase-return.component.html
@@ -189,7 +189,7 @@
                                 </div>
                                
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
-                                    <button class="mr-3" mat-raised-button color="primary"
+                                    <button *ngIf="addPurchaseReturn" class="mr-3" mat-raised-button color="primary"
                                          (click)="calculateFields()" type="submit" [disabled]="this.xferItem.Quantity == 0">Add</button>
                                 </div>
                             </div>
@@ -223,7 +223,7 @@
                                             <tbody>
                                                 <tr *ngFor="let data of itemList ; let i = index;">
                                                     <td class="text-center">
-                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icons ms-1" (click)="deleteItem('Product',i)">delete_forever</mat-icon>
+                                                        <mat-icon *ngIf="data.Status !== 0 && editPurchaseReturn" class="delete_icons ms-1" (click)="deleteItem('Product',i)">delete_forever</mat-icon>
                                                     </td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.InvoiceNo}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.Barcode}}</td>
