--- a/web1/src/app/inventory/supplier/supplier.component.html
+++ b/web1/src/app/inventory/supplier/supplier.component.html
@@ -41,7 +41,7 @@
                             <div class="col-md-1 col-1 d-flex" style="width: 70px;padding: 0;">
                                 <button class="bg-none" (click)="openModal(content)">
                                     <mat-icon class="col-white plus_icon me-1" data-mdb-toggle="modal"
-                                    data-mdb-target="#exampleModal" > add</mat-icon>
+                                    data-mdb-target="#exampleModal" *ngIf="addSupplierList"> add</mat-icon>
                                 </button>
                                 <button class="bg-none" (click)="gridview = !gridview">
                                 <mat-icon class="col-white Grid_icon"  title="Grid View"
@@ -64,10 +64,10 @@
                                     <p class="text-center m-0">{{data.Email}}</p>
                                     <p class="text-center m-0 cardAddress">{{data.Address }}</p>
                                     <div class="text-center mb-3">
-                                        <button class="bg-none" (click)="openModal(content)" (click)="getSupplierById(data)" [routerLink]="['/inventory/supplier']">
+                                        <button *ngIf="editSupplierList" class="bg-none" (click)="openModal(content)" (click)="getSupplierById(data)" [routerLink]="['/inventory/supplier']">
                                             <mat-icon class="edit_icon ms-1" data-mdb-toggle="modal" data-mdb-target="#exampleModal" > edit</mat-icon>
                                         </button>
-                                        <button class="bg-none" (click)="deleteItem(i)">
+                                        <button *ngIf="deleteSupplierList" class="bg-none" (click)="deleteItem(i)">
                                             <mat-icon class="delete_icon ms-1" >delete_forever</mat-icon>
                                         </button>
                                     </div>
@@ -103,10 +103,10 @@
                                 <tbody class="text-center">
                                     <tr *ngFor="let data of dataList  let i = index;">
                                         <td style="width: 7%;">
-                                            <button class="bg-none" (click)="openModal(content)" (click)="getSupplierById(data)" [routerLink]="['/inventory/supplier']">
+                                            <button *ngIf="editSupplierList" class="bg-none" (click)="openModal(content)" (click)="getSupplierById(data)" [routerLink]="['/inventory/supplier']">
                                               <mat-icon class="edit_icon ms-1" data-mdb-toggle="modal" data-mdb-target="#exampleModal" > edit</mat-icon>
                                             </button>
-                                            <button class="bg-none" (click)="deleteItem(i)">
+                                            <button *ngIf="deleteSupplierList" class="bg-none" (click)="deleteItem(i)">
                                               <mat-icon class="delete_icon ms-1" >delete_forever</mat-icon>
                                             </button>
                                         </td>
