--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -38,7 +38,7 @@
                       class="form-control" />
                   </div>
                 </div>
-                <div [routerLink]="['/sale/billing',0,0]" class="col-md-1 col-1" style="width: 40px; padding: 0;">
+                <div *ngIf="addBillingSearch" [routerLink]="['/sale/billing',0,0]" class="col-md-1 col-1" style="width: 40px; padding: 0;">
                   <mat-icon class="col-white plus_icon me-1">
                     add</mat-icon>
                 </div>
@@ -73,7 +73,7 @@
                       class="form-control" />
                   </div> -->
                 </div>
-                <div [routerLink]="['/sale/billing',0,0]" class="col-md-1 col-1" style="width: 40px; padding: 0;">
+                <div *ngIf="addBillingSearch" [routerLink]="['/sale/billing',0,0]" class="col-md-1 col-1" style="width: 40px; padding: 0;">
                   <mat-icon class="col-white plus_icon me-1">
                     add</mat-icon>
 
@@ -128,10 +128,10 @@
                               <i class="fas fa-info-circle ms-1" data-mdb-toggle="modal"
                                 data-mdb-target="#exampleModal"> </i>
                             </button>
-                            <button class="bg-btn" [routerLink]="['/sale/billing', Bdata.CustomerID ,Bdata.ID]">
+                            <button *ngIf="editBillingSearch" class="bg-btn" [routerLink]="['/sale/billing', Bdata.CustomerID ,Bdata.ID]">
                               <mat-icon class="edit_icon ms-1">edit </mat-icon>
                             </button>
-                            <button class="bg-btn" (click)="deleteItem(i)">
+                            <button *ngIf="deleteBillingSearch" class="bg-btn" (click)="deleteItem(i)">
                               <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                             </button>
 
