--- a/web1/src/app/sale/customer-list/customer-list.component.html
+++ b/web1/src/app/sale/customer-list/customer-list.component.html
@@ -39,7 +39,7 @@
                     </div>
                   </div>
                   <div class="col-md-1 col-1" style="width: 70px; padding: 0;">
-                    <mat-icon class="col-white plus_icon me-1" [routerLink]="['/sale/billing',0,0]"> add</mat-icon>
+                    <mat-icon *ngIf="addCustomerSearch" class="col-white plus_icon me-1" [routerLink]="['/sale/billing',0,0]"> add</mat-icon>
                     <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview" title="Grid View">grid_on
                     </mat-icon>
                   </div>
@@ -58,8 +58,8 @@
                       <p class="text-center m-0">{{data.Email}}</p>
                       <p class="text-center m-0 cardAddress">{{data.Address }}</p>
                       <div class="text-center mb-3">
-                        <mat-icon class="edit_icon ms-1" [routerLink]="['/sale/billing',data.ID,0]">edit</mat-icon>
-                        <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
+                        <mat-icon *ngIf="editCustomerSearch"  class="edit_icon ms-1" [routerLink]="['/sale/billing',data.ID,0]">edit</mat-icon>
+                        <mat-icon *ngIf="deleteCustomerSearch"  class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
                       </div>
                     </div>
                   </div>
@@ -99,8 +99,8 @@
                               <button class="bg-btn" >
                                 <mat-icon class="edit_icon pt-1">remove_red_eye</mat-icon>
                               </button>
-                              <mat-icon class="edit_icon ms-1" [routerLink]="['/sale/billing',data.ID,0,]">edit</mat-icon>
-                              <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
+                              <mat-icon *ngIf="editCustomerSearch" class="edit_icon ms-1" [routerLink]="['/sale/billing',data.ID,0,]">edit</mat-icon>
+                              <mat-icon *ngIf="deleteCustomerSearch" class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
                             </td>
                             <td class="text-left">{{dataList.length - i }}</td>
                             <td class="text-left">{{data.Idd}} </td>
