--- a/web1/src/app/sale/doctor-list/doctor-list.component.html
+++ b/web1/src/app/sale/doctor-list/doctor-list.component.html
@@ -38,7 +38,7 @@
                   </div>
                 </div>
                 <div class="col-md-1 col-1" style="width: 70px; padding: 0;">
-                  <mat-icon class="col-white plus_icon me-1" [routerLink]="['/sale/doctor',0]"> add</mat-icon>
+                  <mat-icon *ngIf="addDoctorList" class="col-white plus_icon me-1" [routerLink]="['/sale/doctor',0]"> add</mat-icon>
                   <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview" title="Grid View">grid_on
                   </mat-icon>
                 </div>
@@ -57,8 +57,8 @@
                     <p class="text-center m-0">{{data.Email}}</p>
                     <p class="text-center m-0 cardAddress">{{data.Address }}</p>
                     <div class="text-center mb-3">
-                      <mat-icon class="edit_icon ms-1" [routerLink]="['/sale/doctor',data.ID]">edit</mat-icon>
-                      <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
+                      <mat-icon *ngIf="editDoctorList" class="edit_icon ms-1" [routerLink]="['/sale/doctor',data.ID]">edit</mat-icon>
+                      <mat-icon *ngIf="deleteDoctorList" class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
                     </div>
                   </div>
                 </div>
@@ -95,8 +95,8 @@
                         <tr class="text-center" *ngFor="let data of dataList let i = index;"
                           style="white-space: nowrap;">
                           <td style="width: 7%;">
-                            <mat-icon class="edit_icon ms-1" [routerLink]="['/sale/doctor',data.ID]">edit</mat-icon>
-                            <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
+                            <mat-icon *ngIf="editDoctorList" class="edit_icon ms-1" [routerLink]="['/sale/doctor',data.ID]">edit</mat-icon>
+                            <mat-icon *ngIf="deleteDoctorList" class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
                           </td>
                           <td class="text-left">{{ dataList.length - i }}</td>
                           <td class="text-left">{{data.Name}}</td>
